

syntax = "proto3";
package identity_service;

option go_package = "github.com/razvanmarinn/datalake/protobuf";

service VerificationService {
    rpc VerifyIdentity(VerifyIdentityRequest) returns (VerifyIdentityResponse) {}
    rpc VerifyProjectExistence(VerifyProjectExistenceRequest) returns (VerifyProjectExistenceResponse) {}
}


message VerifyIdentityRequest {
    string user_id = 1;
    string project_name = 2;
}
message VerifyIdentityResponse {
    bool exists = 1;
}
message VerifyProjectExistenceRequest {
    string project_name = 1;
}
message VerifyProjectExistenceResponse {
    bool exists = 1;
}